# Remote_Desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.codex/: config.toml
apps/hostd/: Cargo.toml
apps/hostd/src/: main.rs
apps/hostd/src/platform/: linux.rs  mod.rs  windows.rs
apps/viewer-cli/: Cargo.toml
apps/viewer-cli/src/: main.rs
clients/android-viewer/: README.md  settings.gradle.kts
clients/android-viewer/app/: build.gradle.kts  proguard-rules.pro
clients/android-viewer/app/src/main/: AndroidManifest.xml
clients/android-viewer/app/src/main/java/au/user/privateremote/viewer/: MainActivity.kt
clients/android-viewer/app/src/main/res/values/: strings.xml
clients/desktop-control/: Cargo.toml
clients/desktop-control/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/release-meta/: Cargo.toml
crates/release-meta/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  CODEX_PROMPTS.md  FEATURE_MATRIX.md  IMPLEMENTATION_PLAN.md  OVERVIEW.md  PLATFORM_NOTES.md  SECURITY.md  VENTRAIP.md
ops/caddy/: Caddyfile
ops/docker/: broker.Dockerfile  docker-compose.yml
ops/env/: example.env
ops/releases/: manifest.json
ops/systemd/: private-remote-broker.service  private-remote-hostd.service
ops/windows/: install-host-service.ps1
scripts/: bootstrap.ps1  bootstrap.sh  check.ps1  check.sh  update-broker.ps1  update-broker.sh  update-host.ps1  update-host.sh
services/device-broker/: Cargo.toml
services/device-broker/src/: main.rs
