[package]
name = "device-broker"
edition = "2021"
version = "0.1.0"

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
protocol = { path = "../../crates/protocol" }
release-meta = { path = "../../crates/release-meta" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
